# FxLifeSheet

./: .editorconfig  .gitignore  CLAUDE.md  CODEOWNERS  Dockerfile  LICENSE  README.md  asset-manifest.json  docker-compose.yaml  index.html  lifesheet.json  package-lock.json
.github/workflows/: ci.yaml  master.yaml  whoop.yaml
backend/: Cargo.toml
backend/src/: main.rs  models.rs  web.rs
collector/: .gitignore  Cargo.toml
collector/src/: base_integration.rs  main.rs
collector/tests/: oura.rs
collector/whoop/: .env.example  Dockerfile  README.md  oauth_helper.py  pyproject.toml  whoop_import.py
conf/: nginx.conf
db/: a_create_tables.sql  pyproject.toml  questionDump.py  schema.sql
frontend/: package-lock.json  package.json
frontend/src/: App.scss  App.tsx
src/: worker.ts
static/css/: main.c1e341d9.css  main.c1e341d9.css.map
static/js/: 787.debba948.chunk.js  787.debba948.chunk.js.map  main.f2c15f26.js  main.f2c15f26.js.map
telegram_bot/: Dockerfile  lifesheet.json  package-lock.json  package.json  setenv.sh  tsconfig.json
telegram_bot/src/: scheduler.js  worker.js  worker.ts
viz/: Dockerfile
viz/backend/: .gitignore  Cargo.toml  Dockerfile  sample.env
viz/backend/src/: main.rs
viz/backend/src/_tests/: model_todo.rs  web_todo.rs
viz/backend/src/model/: db.rs  mod.rs  raw_data_dao.rs  todo.rs  viz_categories_dao.rs  viz_metadata_dao.rs  viz_questions_dao.rs
viz/backend/src/web/: mod.rs  raw_data.rs  todo.rs  viz_categories.rs  viz_metadata.rs  viz_questions.rs
viz/frontend/: Dockerfile  package-lock.json  package.json
(+45 files in other folders)
