[package]
name = "collector"
version = "0.1.0"
authors = ["Charu Tak <charu120995@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde_json = "1.0"
rustc-serialize = "0.3.24"
serde = { version = "1.0", features = ["derive"] }

