[package]
name = "viz-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "1.0"
# JSON libs
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
# Web libs
warp = "0.3"
# DB Libs
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres" ] }
sqlb = "0.0.8"
dotenv = "0.15.0"

[dev-dependencies]
anyhow = "1"
